--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node-cron": "^3.0.11",
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
+    "colorette": "^2.0.20",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -38,6 +39,7 @@
     "socket.io": "^4.8.1",
     "twilio": "^5.4.0",
     "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
