--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,50 +1,50 @@
-# name: Deploy Backend to VPS
+name: Deploy Backend to VPS
 
-# on:
-#   push:
-#     branches:
-#       - main
+on:
+  push:
+    branches:
+      - main
 
-# jobs:
-#   deploy:
-#     runs-on: ubuntu-latest
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
 
-#     steps:
-#       - name: Checkout repository
-#         uses: actions/checkout@v3
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-#       - name: Setup SSH and validate secrets
-#         uses: webfactory/ssh-agent@v0.7.0
-#         with:
-#           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+      - name: Setup SSH and validate secrets
+        uses: webfactory/ssh-agent@v0.7.0
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-#       - name: Deploy to VPS
-#         uses: appleboy/ssh-action@v1.0.3
-#         with:
-#           host: ${{ secrets.DROPLET_IP }}
-#           username: root
-#           key: ${{ secrets.SSH_PRIVATE_KEY }}
-#           port: ${{ secrets.SSH_PORT || 22 }}
-#           script: |
-#             # export PATH=$PATH:/usr/bin:/usr/local/bin:/root/.local/share/fnm/node-versions/v24.12.0/installation/bin
+      - name: Deploy to VPS
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.DROPLET_IP }}
+          username: root
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.SSH_PORT || 22 }}
+          script: |
+            # export PATH=$PATH:/usr/bin:/usr/local/bin:/root/.local/share/fnm/node-versions/v24.12.0/installation/bin
 
-#             export FNM_DIR="/root/.local/share/fnm"
-#             export PATH="$FNM_DIR:$PATH"
-#             eval "$(fnm env --use-on-cd)"
+            export FNM_DIR="/root/.local/share/fnm"
+            export PATH="$FNM_DIR:$PATH"
+            eval "$(fnm env --use-on-cd)"
 
-#             cd ~/applications/Venue_List || exit 1
+            cd ~/applications/Venue_List || exit 1
 
-#             git fetch --all
-#             git reset --hard origin/main
+            git fetch --all
+            git reset --hard origin/main
 
-#             npm install
+            npm install
 
-#             if pm2 describe Server > /dev/null 2>&1; then
-#                 pm2 restart Server
-#             else
-#                 pm2 start npm --name "Server" -- run dev
-#             fi
+            if pm2 describe Server > /dev/null 2>&1; then
+                pm2 restart Server
+            else
+                pm2 start npm --name "Server" -- run dev
+            fi
 
-#             pm2 save
+            pm2 save
 
-#             echo "✅ Deployment finished!"
+            echo "✅ Deployment finished!"
